# RLinf

docs/claude-notes/: README.md  agent-workflow.md  architecture.md  changelog.md  concepts.md  deployment.md  gui-plan.md  issues.md  quickstart.md  requirements.md  resume-prompt.md  session-handoff.md
docs/claude-notes/.obsidian/: workspace.json
docs/claude-notes/memory/: MEMORY.md  README.md  claude_notes_workflow.md  feedback_auto_record_issues.md  git_remote_setup.md
examples/reasoning/config/math/: qwen2.5-1.5b-single-gpu-local.yaml
gui/: .gitignore  README.md
gui/backend/: config.py  main.py  pyproject.toml
gui/backend/api/: configs.py  nodes.py  tasks.py  templates.py
gui/backend/models/: task.py  template.py
gui/backend/services/: task_service.py  template_service.py
gui/frontend/: index.html  package.json  vite.config.ts
gui/frontend/src/: App.tsx
gui/frontend/src-tauri/: Cargo.toml  tauri.conf.json
gui/frontend/src-tauri/src/: lib.rs  main.rs
gui/frontend/src/components/: ConfigEditor.tsx
gui/frontend/src/pages/: ConfigEditorPage.tsx  Dashboard.tsx  NodeManager.tsx  Settings.tsx  TaskCreate.tsx  TaskDetail.tsx  TaskList.tsx  Templates.tsx
gui/frontend/src/types/: task.ts  template.ts
gui/frontend/src/utils/: api.ts
gui/scripts/: dev.sh
