[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rlinf-gui-backend"
version = "0.1.0"
description = "FastAPI backend sidecar for RLinf Studio"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "omegaconf>=2.3",
    "aiofiles>=23.2",
    "aiosqlite>=0.20",
]

[tool.setuptools]
py-modules = []

[tool.setuptools.packages.find]
where = ["."]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "pytest>=8.0",
    "httpx>=0.27",
]
