[package]
name = "rlinf-studio"
version = "0.1.0"
description = "RLinf Studio — Desktop GUI for distributed RL training"
authors = ["RLinf Contributors"]
edition = "2021"

[lib]
name = "rlinf_studio_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
